# clawbreak-ai

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  boot.sh  config.py  config.yaml  crons.py  daemon.py  docker-compose.yml  fly.toml  healer.py  install-oracle.sh  install.sh  launch_agents.py  llm.py  memory.py  pyproject.toml  requirements.txt  server.py  tool_parser.py  tools.py
.github/workflows/: deploy.yml
channels/: __init__.py  telegram_bot.py
mcp/: __init__.py
plugins/: manager.py
static/: index.html
station/: __init__.py  api.py  housing.py  registry.py  transfer.py
