[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawbreak"
version = "0.2.1"
description = "Free, self-hosted, self-healing AI agent platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "EvezArt"}]
keywords = ["ai", "agent", "llm", "self-hosted", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/EvezArt/clawbreak-ai"
Repository = "https://github.com/EvezArt/clawbreak-ai"
Issues = "https://github.com/EvezArt/clawbreak-ai/issues"

[project.scripts]
clawbreak = "server:main"
